Changes to file structure of app

--- a/.gitignore
+++ b/.gitignore
@@ -3,33 +3,12 @@
 
 # sass
 /assets/stylesheets/.sass-cache/
-.sass-cache/
+*.sass-cache/
 *.css.map
 
-
-# ignore themes except the example and the README
-/themes/*
-!/themes/cicer
-!/themes/README
-
 # Node Modules
-/build/node_modules/
+/node_modules/
 
-# nodejs
-/build/lib/
-/build/jsdocs/
-/npm-debug.log
-
-
-# Tests
 #/tests/phpunit.xml
-# Tests - auto-generated files
-#/data-autotest
-#/tests/coverage*
-#/tests/karma-coverage
-#/tests/autoconfig*
-#/tests/autotest*
-#/tests/data/lorem-copy.txt
-#/tests/data/testimage-copy.png
-#/config/config-autotest-backup.php
-#/config/autoconfig.php
+#/themes/*
+#!/themes/cicer
